@@ -1,3 +1,7 @@
+2005-11-16  Vincent Noel  <vincent.noel@gmail.com>
+
+	* logview.c (logview_init): Cleanup the main treeview creation.
+
 2005-11-16  Vincent Noel <vincent.noel@gmail.com>
 
 	* loglist.c: (loglist_unbold_log), (loglist_bold_log),
